# sa_waver

./: Cargo.toml  README.md  bundler.toml  rustfmt.toml
assets/: test.ron
nih_plug_egui/: Cargo.toml
nih_plug_egui/src/: resizable_window.rs
presets/Producers/UnD3ath/: 1 Bit.ron  Hard Clip.ron  House (Shit).ron  M.ron  Quantize.ron  Reverse Polarity.ron  Sine.ron  Soft Clip.ron
sa_waver_installer/: Cargo.toml  README.md
sa_waver_installer/src/: main.rs
src/: default.ron  editor.rs  fs.rs  lib.rs  main.rs  oversampling.rs  param_knob.rs  sout_ui.rs
