[package]
name = "sa_waver"
version = "0.1.0"
edition = "2021"
authors = ["sout <sout233@163.com>"]
license = "GPL-3.0-or-later"

[workspace]
members = ["xtask", "sa_waver_installer"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
fundsp = "0.23.0"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "standalone",
] }

# nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_egui = { path = "./nih_plug_egui" }

bevy_lookup_curve = { path = "../bevy_lookup_curve", default-features = false, features = [
    "serialize",
    "ron",
    "editor_egui",
] }
# glam = "0.30.10"
image = { version = "0.24.5", default-features = false, features = ["png"] }
directories = "6.0.0"
parking_lot = "0.12.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
