[package]
name = "sa_waver_installer"
version = "0.2.1"
edition = "2021"
authors = ["sout <sout233@163.com>"]
license = "GPL-3.0-or-later"

[dependencies]
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["image"] }
image = { version = "0.24.5", default-features = false, features = ["png"] }
env_logger = "0.11.10"
rfd = "0.17.2"
windows = { version = "0.62.2", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_Registry", "Win32_System_Threading"] }
